--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,7 @@ h3 {
 /* Navigation Links */
 h4 {
     font-size: 16px;
-    padding: 6px 8px 6px 16px;
+    padding: 6px 8px 6px ;
     color: var(--swan);
 }
 
@@ -104,6 +104,10 @@ p {
     color: var(--swan)
 }
 
+textarea {
+    margin-left: 15px
+}
+
 .resume {
     font-size: 20px;
 
@@ -112,6 +116,13 @@ p {
 .foot {
     margin-top: 70px;
     margin-left: -25px;
+}
+
+button {
+    position: relative;
+    margin-top: 5%;
+    margin-left: 50%;
+    margin-right: 50%;
 }
 
 /* Image Rules */
