--- a/src/style.css
+++ b/src/style.css
@@ -120,7 +120,7 @@ textarea {
 
 button {
     position: relative;
-    margin-top: 5%;
+    margin-top: 25px;
     margin-left: 50%;
     margin-right: 50%;
 }
