--- a/src/style.css
+++ b/src/style.css
@@ -40,13 +40,6 @@ h3 {
     color: var(--jun);
 }
 
-/* Navigation Links */
-h4 {
-    font-size: 16px;
-    padding: 6px 8px 6px ;
-    color: var(--jun);
-}
-
 li {
     display: inline-block;
     margin-left: 25px; 
@@ -95,7 +88,7 @@ textarea {
 }
 
 .foot {
-    margin-top: 20px;
+    margin-top: 2.5%;
     margin-left: -25px;
 }
 
@@ -138,7 +131,16 @@ button {
 .abt,
 .cont {
     font-size: 25px;
-    color: var(--chi)
+    color: var(--chi);
+    transition: all .2s ease-in-out;
+}
+
+.home:hover,
+.proj:hover,
+.abt:hover,
+.cont:hover {
+    color:var(--whi);
+    transform: scale(1.25)
 }
 
 /* Footer button Rules */
@@ -159,76 +161,94 @@ button {
 .ansys,
 .math,
 .labv {
-    font-size: 60px;
-    color: var(--jun)
+    font-size: 12.5px;
+    color: var(--jun);
+    transition: all .2s ease-in-out;
 }
 
 .html:hover {
-    color: orange
+    color: orange;
+    transform: scale(1.25);
 }
 
 .css:hover {
-    color: blue
+    color: blue;
+    transform: scale(1.25);
 }
 
 .js:hover {
-    color: white
+    color: white;
+    transform: scale(1.25);
 }
 
 .jqry:hover {
-    color: lightblue
+    color: lightblue;
+    transform: scale(1.25);
 }
 
 .btsp:hover {
-    color:purple
+    color:purple;
+    transform: scale(1.25);
 }
 
 .mtcs:hover {
-    color:#eb7077 
+    color:#eb7077;
+    transform: scale(1.25);
 }
 
 .hdbs:hover {
-    color:#302116
+    color:#302116;
+    transform: scale(1.25);
 }
 
 .react:hover {
-    color:#5ed3f3
+    color:#5ed3f3;
+    transform: scale(1.25);
 }
 
 .matui:hover {
-    color:#0978e6
+    color:#0978e6;
+    transform: scale(1.25);
 }
 
 .pyth:hover {
-    color:#f7d54c
+    color:#f7d54c;
+    transform: scale(1.25);
 }
 
 .expr:hover {
-    color:#ebd81c
+    color:#ebd81c;
+    transform: scale(1.25);
 }
 
 .node:hover {
-    color:#8bc238
+    color:#8bc238;
+    transform: scale(1.25);
 }
 
 .mysql:hover {
-    color:#005e86
+    color:#005e86;
+    transform: scale(1.25);
 }
 
 .godb:hover {
-    color:#023430
+    color:#023430;
+    transform: scale(1.25);
 }
 
 .ansys:hover {
-    color:#f4ae25
+    color:#f4ae25;
+    transform: scale(1.25);
 }
 
 .math:hover {
-    color:#d6272b
+    color:#d6272b;
+    transform: scale(1.25);
 }
 
 .labv:hover {
-    color:#f7d700
+    color:#f7d700;
+    transform: scale(1.25);
 }
 
 /* Creates a glow around hovered project */
@@ -284,5 +304,97 @@ button {
     .proj-box{
       flex: 0 0 33%;
       max-width: 33%;
+    }
+}
+
+@media screen and (min-width: 552px){
+    .html,
+    .css,
+    .js,
+    .jqry,
+    .btsp,
+    .mtcs,
+    .hdbs,
+    .react,
+    .matui,
+    .pyth,
+    .expr,
+    .node,
+    .mysql,
+    .godb,
+    .ansys,
+    .math,
+    .labv {
+        font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 864px){
+    .html,
+    .css,
+    .js,
+    .jqry,
+    .btsp,
+    .mtcs,
+    .hdbs,
+    .react,
+    .matui,
+    .pyth,
+    .expr,
+    .node,
+    .mysql,
+    .godb,
+    .ansys,
+    .math,
+    .labv {
+        font-size: 25px;
+    }
+}
+
+@media screen and (min-width: 1008px){
+    .html,
+    .css,
+    .js,
+    .jqry,
+    .btsp,
+    .mtcs,
+    .hdbs,
+    .react,
+    .matui,
+    .pyth,
+    .expr,
+    .node,
+    .mysql,
+    .godb,
+    .ansys,
+    .math,
+    .labv {
+        font-size: 30px;
+    }
+}
+
+@media screen and (min-width: 1366px){
+    .html,
+    .css,
+    .js,
+    .jqry,
+    .btsp,
+    .mtcs,
+    .hdbs,
+    .react,
+    .matui,
+    .pyth,
+    .expr,
+    .node,
+    .mysql,
+    .godb,
+    .ansys,
+    .math,
+    .labv {
+        font-size: 40px;
+    }
+
+    .foot {
+        margin-top: 1%;
     }
 }
